[package]
name = "crd-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "Custom Resource Definition"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/crd-api"
categories = ["API"]
keywords = ["operator", "API"]

[dependencies]
anyhow = "1.0.75"
garde = { version = "0.16.1", default-features = false, features = ["derive", "pattern", "url"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28", "schemars"] }
kube = { version = "0.86.0", features = ["runtime", "derive"] }
regex = { version = "1", default-features = false, features = ["unicode-perl"] } # garde did not enable regex unicode-perl feature by default, but we need it
schemars = "0.8.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["time"] }
tracing = "0.1.37"

# Some false positive deps...
[package.metadata.cargo-machete]
ignored = ["regex", "serde_json"]
