[package]
name = "deploy-operator"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "The deploy-operator component of xline-operator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/deploy"
categories = ["operator"]
keywords = ["kubernetes", "xline", "operator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.3.4", features = ["derive"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26", "schemars"] }
kube = { version = "0.83.0", features = ["runtime", "derive"] }
schemars = "0.8.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "net",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utils = { path = "../utils" }

[dev-dependencies]
garde = { version = "0.11.2", default-features = false, features = ["derive", "pattern"] }
