[package]
name = "operator-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "API types that used in operators"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/operator-api"
categories = ["API"]
keywords = ["operator", "API", "operator"]

[dependencies]
async-trait = "0.1.72"
k8s-openapi = { version = "0.18.0", features = ["v1_26", "schemars"] }
kube = { version = "0.83.0", features = ["runtime", "derive", "ws"] }
serde = { version = "1.0.130", features = ["derive"] }
