[package]
name = "operator-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "API types that used in operators"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/operator-api"
categories = ["API"]
keywords = ["operator", "API", "operator"]

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
k8s-openapi = { version = "0.20.0", features = ["v1_28", "schemars"] }
kube = { version = "0.86.0", features = ["runtime", "derive", "ws"] }
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.28"
