[package]
name = "operator-api"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "API between operators and sidecars"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/operator-api"
categories = ["API"]
keywords = ["operator", "API"]

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
crd-api = { path = "../crd-api" }
futures = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28", "schemars"] }
kube = { version = "0.86.0", features = ["runtime", "derive", "ws"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.0", features = ["time"] }
