[package]
name = "sidecar-operator"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "The sidecar-operator component of xline-operator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/sidecar"
categories = ["operator"]
keywords = ["kubernetes", "xline", "operator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
