[package]
name = "xline-sidecar"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "The xline sidecar component of xline-operator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/sidecar"
categories = ["operator"]
keywords = ["kubernetes", "xline", "operator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
bytes = "1.4.0"
clap = { version = "4.3.4", features = ["derive"] }
engine = { git = "https://github.com/xline-kv/Xline.git", package = "engine" }
event-listener = "2.5.3"
futures = "0.3.28"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.97"
tera = { version = "1.17.1", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "time",
    "macros",
    "net",
] }
toml = "0.7.4"
tonic = "0.9.2"
tonic-health = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utils = { path = "../utils" }
xline-client = { git = "https://github.com/xline-kv/Xline.git", package = "xline-client" }
xlineapi = { git = "https://github.com/xline-kv/Xline.git", package = "xlineapi" }
