[package]
name = "xline-sidecar"
version = "0.1.0"
edition = "2021"
authors = ["DatenLord <dev@datenlord.io>"]
description = "The xline sidecar component of xline-operator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xline-kv/xline-operator/tree/main/sidecar"
categories = ["operator"]
keywords = ["kubernetes", "xline", "operator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
bytes = "1.4.0"
clap = { version = "4.3.4", features = ["derive"] }
clippy-utilities = "0.2.0"
engine = { git = "https://github.com/xline-kv/Xline.git", package = "engine" }
futures = "0.3.28"
operator-api = { path = "../operator-api" }
prometheus = "0.13.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "net",
] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
xline-client = { git = "https://github.com/xline-kv/Xline.git", package = "xline-client" }
